fixing overlap in box new

--- a/_includes/mapgive-in-a-box/style.css
+++ b/_includes/mapgive-in-a-box/style.css
@@ -18,6 +18,13 @@
 .cell-left { float:left; width:60%; }
 .cell-right { float:left; width:40%; }
 
+.cell-menubar { float:left; width:300px; }
+
+.cell-main {
+    padding: 5px 15px 5px 30px;
+    float: left;
+}
+
 .footercell { float:left; width:75%; }
 .right {float:right;}
 .left {float:left;}
